--- a/index.ipynb
+++ b/index.ipynb
@@ -51,13 +51,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "def fib(n):\n",
+    "    last_number = 0\n",
+    "    current_number = 1\n",
+    "    if n == 1:\n",
+    "        nth_number = current_number\n",
+    "    else:\n",
+    "        for i in range(n-1):\n",
+    "            nth_number = last_number + current_number\n",
+    "            last_number = current_number\n",
+    "            current_number = nth_number\n",
     "    return nth_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    print(fib(i))"
    ]
   },
   {
@@ -73,12 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "def flat_list(L):\n",
+    "    print('Current L:', L) #Optional, to display process\n",
+    "    for i in L:\n",
+    "        if type(i) == list:\n",
+    "            flat_list(i, result)\n",
+    "        else:\n",
+    "            result.append(i)\n",
+    "    return result\n",
     "    return flattened"
    ]
   },
@@ -97,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here."
+    "#Your answer here.\n"
    ]
   },
   {
@@ -125,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
